# miv

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli_argument.rs  constants.rs  content.rs  editor.rs  input.rs  lib.rs  logger.rs  main.rs  screen.rs  stdin_raw_mode.rs
test-files/: test-file-long.txt  test-file-short.txt  test-file.txt  with-tabs.txt
