[package]
name = "miv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
once_cell = "1.20.2"
term_size = "0.3.2"
termios = "0.3.3"
